# mcp-git-course

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
mcp-git/: __main__.py  config.py
rdm_mcp/: prompts.py  state.py
resources/lessons/: overview.md
resources/lessons/01_basics/: 01_version-control.md  02_git.md  03_installing-git.md  04_basic-configuration.md  05_ssh-key.md
resources/lessons/02_basic-git-workflows/: 01_initializing.md  02_tracking-changes.md  03_cloning.md  04_create-remote-repo.md
resources/lessons/03_branching/: 01_branching.md  02_merging.md
resources/lessons/04_collaboration/: 01_pull-requests.md  02_forking.md  03_contributing.md
resources/lessons/05_advanced/: 03_tagging.md  04_reverting.md
src/mcp-git/: state.py
src/mcp_git/: __main__.py  state.py
src/mcp_git/resources/lessons/01_basics/: 02_git.md
src/mcp_git/resources/lessons/02_basic-git-workflows/: 03_cloning.md
src/mcp_git/resources/lessons/03_branching/: 02_merging.md
src/mcp_git/resources/lessons/05_advanced/: 01_stashing.md
src/mcp_git_course/: __main__.py  config.py  prompts.py  state.py
src/mcp_git_course/resources/lessons/: overview.md
src/mcp_git_course/resources/lessons/01_basics/: 01_introduction.md  02_course_overview.md  03_installing-git.md  03_version_control.md  04_git.md  05_installing_git.md  05_ssh-key.md  06_basic-configuration.md  06_commands.md  07_basic-configuration.md  08_ssh-key.md
src/mcp_git_course/resources/lessons/02_basic-git-workflows/: 01_initializing.md  02_tracking-changes.md  03_cloning.md  04_create-remote-repo.md
(+15 files in other folders)
