[project]
name = "mcp-git-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["fastmcp>=2.10.6"]

[project.scripts]
mcp-git-course = "mcp_git_course.__main__:main"

[build-system]
requires = ["setuptools >= 45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
"mcp_git" = ["resources/**/*"]
